# FilamentManagement

./: .gitignore  README.md  READMEDE.md  api.py  app.py  models.py  pyproject.toml  requirements.txt
static/: api.js  style.css
templates/: base.html  index.html  spool_detail.html
tests/: test_spool.py
